fix add smoothie button z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 html, body { height: 100% }
 a:hover { text-decoration: none; }
 textarea { height: 230px; }
-.container { position: relative }
+// .container { position: relative }
 
 .field_with_errors input[type="text"], .field_with_errors input[type="password"] {
   border: 1px solid red;
@@ -49,4 +49,8 @@ textarea { height: 230px; }
   }
 }
 
-.btn-add-smoothie { position: absolute; bottom: 10px; right: 10px }
+.btn-add-smoothie {
+  z-index: 999;
+  position: absolute;
+  bottom: 15px;
+  right: 30px }
